# orca_nw_lib

./: .gitignore  README.md  __init__.py  build.gradle  data_graph.py  generate_code.py  gnmi_util.py  logging.yml  manage.py  orca.yml  pyproject.toml  readme.md  settings.gradle
.github/workflows/: publish_to_pypi.yml
discovery/: __init__.py  apps.py  urls.py  views.py
discovery/processor/: __init__.py  constants.py  data_graph.py  gnmi_util.py  orca.yml  sonic_grpc.py  utils.py
doc/: .$ORCA.drawio.bkp  ORCA.drawio
orca_backend/: __init__.py  constants.py  data_graph.py  device.py  discovery.py  generate_code.py  gnmi_pb2.py  gnmi_pb2.pyi  gnmi_util.py  graph_db_models.py  graph_db_utils.py  interfaces.py  lldp_discovery.py  mclag.py  orca.yml  port_chnl.py  utils.py
orca_backend/test/: test.py  test_common.py  test_device.py  test_discovery.py  test_interface.py  test_mclag.py
orca_netbox/: __init__.py  apps.py
orca_nw_lib/: __init__.py  bgp.py  bgp_db.py  bgp_gnmi.py  breakout.py  breakout_db.py  breakout_gnmi.py  common.py  constants.py  crm_influxdb.py  crm_promdb.py  device.py  device_db.py  device_gnmi.py  device_info_influxdb.py  device_info_promdb.py  discovery.py  dom_gnmi.py  dom_influxdb.py  dom_promdb.py  gnmi_pb2.py  gnmi_pb2_grpc.py  gnmi_sub.py  gnmi_util.py  graph_db_models.py  graph_db_utils.py  influxdb_utils.py  interface.py  interface_db.py  interface_gnmi.py  interface_influxdb.py  interface_promdb.py  interfaces.py  lldp.py  lldp_db.py  lldp_gnmi.py  logging.yml  mclag.py  mclag_db.py  mclag_gnmi.py  (+40 more)
orca_nw_lib/test/: create_config.py  read_script.py  test_common.py  test_device.py  test_discovery.py  test_interface.py  (+2 more)
orca_webapp/: asgi.py  settings.py  urls.py  wsgi.py
src/: __init__.py  constants.py  data_graph.py  sonic_grpc.py  sonic_rest.py  utils.py
test/: create_config.py  test_gnmi_utils.py  test_network.py  test_subscription.py
(+6 files in other folders)
