[tool.poetry]
version = "1.0.0"
name = "discovery"
description = "orca backend serves as nms"
authors = ["Kamal Krishna Bhatt <kamal.bhatt@stordis.com>"]
##Can not include git ignored directories recursively hence need to do like this
include = ["gnmi*.py*", "github/*/*/*/*/*/*.py*","github.com/*/*/*/*/*.py*"]
packages = [
    { include = "discovery"},
]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
neo4j = "^5.4.0"
grpcio-tools = "^1.51.1"
requests = "^2.28.2"
Django = "^4.1.5"
django-rest-framework = "^0.1.0"
pyang = "^2.5.3"
pyangbind = "^0.8.1"
wget = "^3.2"
autopep8 = "^2.0.1"
GitPython = "^3.1.31"
