[tool.poetry]
version = "0.1"
name = "orca_backend"
description = "orca backend serves as nms"
authors = ["Kamal Krishna Bhatt <kamal.bhatt@stordis.com>"]
include = ["orca_backend/github/**/*","orca_backend/github.com/**/*"]

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0"
neo4j = "^5.4.0"
requests = "^2.28.2"
wget = "^3.2"
autopep8 = "^2.0.1"
GitPython = "^3.1.31"
neomodel = "^5.0.0"
grpcio = "<=1.48.2"
protobuf = "^4.23.0"
pyangbind = "^0.8.1"
pytest = "^7.3.1"

